--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jcobhams/newsapi": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "stripe/stripe-php": "^13.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
